# bootcamp

./: .gitignore  README.md  daily-log.md  pyproject.toml  requirements.txt
basics/: main.py
basics/hriteek-hello/: .gitignore  main.py
dataflow-framework/: README.md
dataflow-framework/abstraction-level-0/: README.md
dataflow-framework/abstraction-level-2/: README.md  main.py  pipeline.py
dataflow-framework/abstraction-level-3/: README.md  cli.py  core.py
dataflow-framework/abstraction-level-3/processors/: snake.py
dataflow-framework/abstraction-level-4/: adapter.py  input.txt  pipeline.yaml  processor_types.py
dataflow-framework/abstraction-level-4/processors/: filter.py  joiner.py
dataflow-framework/abstraction-level-7/: config.yaml  main.py
dataflow-framework/abstraction-level-7/dashboard/: api.py
dataflow-framework/abstraction-level-7/state_engine/: engine.py
dataflow-framework/abstraction-level-8/: dag_config.yaml  main.py
dataflow-framework/abstraction-level-8/state_engine/: metrics.py
dataflow-framework/abstraction-level-9/: Makefile  file.txt  run.sh
dataflow-framework/abstraction-level-9/app/: processor.py  watcher.py
day0/: pyproject.toml
day0/hriteek-hello/: pyproject.toml
day0/hriteek-hello/src/hriteek_hello/: hello.py
day1/: README.md  mkdocs.yml
day1/todo-cli-app/: requirements.txt
day2/python-drills/basic-drill/: README.md
day2/python-drills/basic-drill/hello-world/: pyproject.toml
day2/python-drills/basic-drill/hello-world/hello_world/: config_loader.py  hello.py  main.py
day3/: FINAL.md
day3/abstraction-level-0/: process.py
day3/abstraction-level-1/: README.md  process.py
day3/abstraction-level-2/: cli.py  core.py  processor_types.py
day3/abstraction-level-3/: cli.py  core.py  main.py  pipeline.py
day3/abstraction-level-3/processors/: upper.py
day3/abstraction-level-4/: README.md  cli.py  core.py  main.py  out.txt  pipeline.py
day3/abstraction-level-4/processors/: __init__.py  base.py  counter.py  snake.py  splitter.py  upper.py
day3/abstraction-level-4/tests/: test_core.py
day3/abstraction-level-5/: README.md  main.py
day3/abstraction-level-5/dag_engine/: __init__.py  config.yaml  engine.py
day3/abstraction-level-6/: README.md  config.yaml  main.py
day3/abstraction-level-6/state_engine/: engine.py
day3/abstraction-level-7/: requirements.txt
day3/abstraction-level-8/: README.md  monitor.py
day3/abstraction-level-8/processors/: filters.py  formatters.py  output.py  start.py
day3/abstraction-level-8/state_engine/: dashboard.py  (+1 more)
day3/abstraction-level-9/: Dockerfile  README.md  api.py  main.py
day4/sqlalchemy_pydantic/: README.md  advanced.py  async_operations.py  beginner.py  database.py  intermediate.py  requirements.txt
day4/sqlite3/: store.db
docs/: daily-log.md  index.md
doctools/docs/: markdown-cheetsheet.md
image-caption-extraction/: README.md
language-drills/python-drills/: README.md
language-drills/python-drills/basic-drill/many-hellos/: pyproject.toml
language-drills/python-drills/basic-drill/many-hellos/many_hellos/: __init__.py
language-drills/python-drills/exercises/section-7/ex-7-5/: pyproject.toml
persistece-drills/sqlalchemy_pydantic/: database.py  main.py  models.py  schemas.py
persistece-drills/sqlite3/: products.csv
src/hriteek_hello/: cli.py  hello.py
todo-cli-app/: .gitignore  README.md  pyproject.toml
todo-cli-app/todo/: main.py
(+84 files in other folders)
