[project]
name = "hriteek-hello"
version = "0.2.0"
description = "Say hello with style"
authors = [{ name = "Hriteek Roy", email = "hriteekroy1869@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer[all]"
]

[project.scripts]
hriteek-hello = "hriteek_hello.cli:app"

[project.urls]
Homepage = "https://github.com/hritxx/hriteek-hello"