[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A simple CLI to-do list manager"
authors = [{ name = "Hriteek Roy", email = "hriteekroy1869@gmail.com" }]
dependencies = []

[project.scripts]
todo = "todo.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
