[project]
name = "hriteek-hello"
version = "1.1.2"
description = "Say hello with style"
authors = [{ name = "Hriteek Roy", email = "hriteekroy1869@gmail.com" }]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer[all]"
]

[project.scripts]
hriteek-hello = "hriteek_hello.cli:app"

[project.urls]
Homepage = "https://github.com/hritxx/hriteek-hello"
Repository = "https://github.com/hritxx/hriteek-hello" 