[project]
name = "mytool"
version = "0.1.0"
description = "A sample Python CLI tool"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"

[project.scripts]
mytool = "mypkg.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"